--- a/templates/upload/show.html.twig
+++ b/templates/upload/show.html.twig
@@ -35,6 +35,10 @@
 					<td>{{ upload.palindromeCount }}</td>
 				</tr>
 
+				<tr>
+					<th>Highlight</th>
+					<td>{{ upload.highlight | raw  }}</td>
+				</tr>
 			</tbody>
 		</table>
 		<div class="form-group">
